# THOMAS-Viewer

./: CMakeLists.txt  PROTOCOL  README.md  org.thomas.viewer.gschema.xml
data/: CMakeLists.txt  thomas-viewer.desktop
schemas/: CMakeLists.txt  org.thomas.viewer.gschema.xml
src/: Application.vala  CMakeLists.txt  MainWindow.vala  SettingsManager.vala  config.vala  viewer.vala
src/Backend/: BusManager.vala  Joystick.vala  JoystickManager.vala  ServiceBrowser.vala  SettingsManager.vala  TCPClient.vala  UDPRenderer.vala
src/Dialogs/: SelectHostDialog.vala
src/Widgets/: CameraPage.vala  CameraStream.vala  ConfigurationPage.vala  ControlBar.vala  MapTab.vala  MapsPage.vala  Properties.vala  SensorData.vala  SideBar.vala  TelemetryView.vala
vapi/: avahi-client.vapi  linux-joystick.vapi
