# Desktop-Datei
install (FILES thomas-viewer.desktop DESTINATION share/applications)

# Icons
install (FILES 128/thomas-viewer.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/128x128/apps)
install (FILES 64/thomas-viewer.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/64x64/apps)
install (FILES 48/thomas-viewer.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/48x48/apps)